--- a/FloraCapstone2nd/Pages/Shared/_Layout.cshtml
+++ b/FloraCapstone2nd/Pages/Shared/_Layout.cshtml
@@ -7,12 +7,95 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/FloraCapstone2nd.styles.css" asp-append-version="true" />
+    
+
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+      <nav id="sidebarMenu" class="collapse d-lg-block sidebar collapse bg-white">
+          <div class="position-sticky">
+           <div class="list-group list-group-flush mx-3 mt-4">
+                <a class="list-group-item list-group-item-action py-2 ripple"
+                   aria-current="true"
+                   data-mdb-toggle="collapse"
+                   href="#collapseExample2"
+                   aria-expanded="true"
+                   aria-controls="collapseExample2"
+                   >
+                     <i class="fas fa-chart-area fa-fw me-3"></i>
+                     <span>Collapsed menu</span>
+                 </a>
+                <ul
+                    id="collapseExample2"
+                    class="collapse list-group list-group-flush"
+                    >
+                  <li class="list-group-item py-1">
+                    <a href="" class="text-reset">Link</a>
+                  </li>
+                  <li class="list-group-item py-1">
+                    <a href="" class="text-reset">Link</a>
+                  </li>
+                  <li class="list-group-item py-1">
+                    <a href="" class="text-reset">Link</a>
+                  </li>
+                  <li class="list-group-item py-1">
+                    <a href="" class="text-reset">Link</a>
+                  </li>
+                </ul>
+            </div>
+           </div>
+     </nav>
+
+
+     <nav id="main-navbar" class="navbar navbar-expand-lg navbar-light bg-success fixed-top">
+       <div class="container-fluid">
+           <button
+              class="navbar-toggler"
+              type="button"
+              data-mdb-toggle="collapse"
+              data-mdb-target="#sidebarMenu"
+              aria-controls="sidebarMenu"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+              >
+        <i id="burger" class="fas fa-bars"></i>
+      </button>
+
+      <ul class="navbar-nav ms-auto d-flex flex-row">
+
+          <li class="nav-item dropdown">
+          <a
+             class="nav-link me-3 me-lg-0 dropdown-toggle hidden-arrow"
+             href="#"
+             id="navbarDropdownMenuLink"
+             role="button"
+             data-mdb-toggle="dropdown"
+             aria-expanded="false"
+             >
+           <i id="user" class="far fa-user-circle fa-lg"></i>
+            
+          </a>
+          <ul
+              class="dropdown-menu dropdown-menu-end"
+              aria-labelledby="navbarDropdownMenuLink"
+              >
+            <li><a class="dropdown-item" href="#"><i class="fas fa-door-open me-3" ></i>Login</a></li>
+            <li><a class="dropdown-item" href="#"><i class="fas fa-clipboard-list me-3"></i>Register</a></li>
+          </ul>
+        </li>
+
+        
+       
+       
+      </ul>
+    </div>
+  </nav>
+  <!--
+
+
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">FloraCapstone2nd</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">Home</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -29,6 +112,7 @@
                 </div>
             </div>
         </nav>
+         Navbar -->
     </header>
     <div class="container">
         <main role="main" class="pb-3">
