Navbar-----Still can't get bootstrap to work for some reason.

--- a/FloraCapstone2nd/Pages/Shared/_Layout.cshtml
+++ b/FloraCapstone2nd/Pages/Shared/_Layout.cshtml
@@ -7,48 +7,128 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/FloraCapstone2nd.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.css" />
 
 </head>
 <body>
     <header>
-      <nav id="sidebarMenu" class="collapse d-lg-block sidebar collapse bg-white">
-          <div class="position-sticky">
-           <div class="list-group list-group-flush mx-3 mt-4">
-                <a class="list-group-item list-group-item-action py-2 ripple"
-                   aria-current="true"
-                   data-mdb-toggle="collapse"
-                   href="#collapseExample2"
-                   aria-expanded="true"
-                   aria-controls="collapseExample2"
-                   >
-                     <i class="fas fa-chart-area fa-fw me-3"></i>
-                     <span>Collapsed menu</span>
-                 </a>
-                <ul
-                    id="collapseExample2"
-                    class="collapse list-group list-group-flush"
-                    >
-                  <li class="list-group-item py-1">
-                    <a href="" class="text-reset">Link</a>
-                  </li>
-                  <li class="list-group-item py-1">
-                    <a href="" class="text-reset">Link</a>
-                  </li>
-                  <li class="list-group-item py-1">
-                    <a href="" class="text-reset">Link</a>
-                  </li>
-                  <li class="list-group-item py-1">
-                    <a href="" class="text-reset">Link</a>
-                  </li>
-                </ul>
-            </div>
-           </div>
-     </nav>
+
+<!--
+ <nav
+       id="sidebarMenu"
+       class="collapse d-lg-block sidebar collapse bg-white"
+       >
+    <div class="position-sticky">
+      <div class="list-group list-group-flush mx-3 mt-4">
 
 
-     <nav id="main-navbar" class="navbar navbar-expand-lg navbar-light bg-success fixed-top">
-       <div class="container-fluid">
-           <button
+           <a
+           class="list-group-item list-group-item-action py-2 ripple"
+           aria-current="true">
+          <i class="fas fa-home me-3"></i><span>Home</span>
+        </a>
+        
+         <a
+           class="list-group-item list-group-item-action py-2 ripple"
+           aria-current="true">
+          <i class="fas fa-stethoscope me-3"></i><span>Diagnose</span>
+        </a>
+        
+                 <a
+           class="list-group-item list-group-item-action py-2 ripple"
+           aria-current="true">
+          <i class="fas fa-book me-3"></i><span>How To's</span>
+        </a>
+        
+                 <a
+           class="list-group-item list-group-item-action py-2 ripple"
+           aria-current="true">
+          <i class="fas fa-users me-3"></i><span>About Us</span>
+        </a>
+        
+                 <a
+           class="list-group-item list-group-item-action py-2 ripple"
+           aria-current="true">
+          <i class="fas fa-money-bill me-3"></i><span>Pricing</span>
+        </a>
+      
+           <a
+           class="list-group-item list-group-item-action py-2 ripple"
+           aria-current="true"
+           data-mdb-toggle="collapse"
+           href="#collapseExample2"
+           aria-expanded="true"
+           aria-controls="collapseExample2"
+           >
+          <i class="fas fa-users-cog me-3"></i>
+             <span>Moderators</span>
+        </a>
+				
+   
+        <ul
+            id="collapseExample2"
+            class="collapse list-group list-group-flush"
+            >
+          <li class="list-group-item py-1">
+            <a href="" class="text-reset">Link</a>
+          </li>
+          <li class="list-group-item py-1">
+            <a href="" class="text-reset">Link</a>
+          </li>
+          <li class="list-group-item py-1">
+            <a href="" class="text-reset">Link</a>
+          </li>
+          <li class="list-group-item py-1">
+            <a href="" class="text-reset">Link</a>
+          </li>
+        </ul>
+ 
+
+
+           <a
+           class="list-group-item list-group-item-action py-2 ripple"
+           aria-current="true"
+           data-mdb-toggle="collapse"
+           href="#collapseExample2"
+           aria-expanded="true"
+           aria-controls="collapseExample2"
+           >
+          <i class="fas fa-user-tie me-3"></i><span>Admins</span>
+        </a>
+				
+        
+        <ul
+            id="collapseExample2"
+            class="collapse list-group list-group-flush"
+            >
+          <li class="list-group-item py-1">
+            <a href="" class="text-reset">Link</a>
+          </li>
+          <li class="list-group-item py-1">
+            <a href="" class="text-reset">Link</a>
+          </li>
+          <li class="list-group-item py-1">
+            <a href="" class="text-reset">Link</a>
+          </li>
+          <li class="list-group-item py-1">
+            <a href="" class="text-reset">Link</a>
+          </li>
+        </ul>
+       
+      </div>
+    </div>
+  </nav>
+
+
+
+  <nav
+       id="main-navbar"
+       class="navbar navbar-expand-lg navbar-light bg-success fixed-top"
+       >
+  
+    <div class="container-fluid">
+   
+      <button
               class="navbar-toggler"
               type="button"
               data-mdb-toggle="collapse"
@@ -59,10 +139,13 @@
               >
         <i id="burger" class="fas fa-bars"></i>
       </button>
-
+	
+    
+     
+   
       <ul class="navbar-nav ms-auto d-flex flex-row">
-
-          <li class="nav-item dropdown">
+        
+        <li class="nav-item dropdown">
           <a
              class="nav-link me-3 me-lg-0 dropdown-toggle hidden-arrow"
              href="#"
@@ -88,11 +171,15 @@
        
       </ul>
     </div>
+   
   </nav>
-  <!--
+
+-->
+      
+  
 
 
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-success border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">Home</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -108,10 +195,11 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
                     </ul>
+                    
                 </div>
             </div>
         </nav>
-         Navbar -->
+        
     </header>
     <div class="container">
         <main role="main" class="pb-3">
