--- a/FloraCapstone2nd/Pages/Shared/_Layout.cshtml
+++ b/FloraCapstone2nd/Pages/Shared/_Layout.cshtml
@@ -3,17 +3,19 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - FloraCapstone2nd</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <title>@ViewData["Title"] - FloraCapstone2nd</title >
+    <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.css" />
+    <link rel="stylesheet" href="~/font-awesome/css/all.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/FloraCapstone2nd.styles.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.css" />
+   
 
 </head>
 <body>
     <header>
 
 <!--
+     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
  <nav
        id="sidebarMenu"
        class="collapse d-lg-block sidebar collapse bg-white"
@@ -189,7 +191,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index"><i class="bi bi-people-fill"></i>Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Index"><i class="fas fa-edit"></i> Home</a>
                             
                         </li>
                         <li class="nav-item">
