--- a/FloraCapstone2nd/Views/Shared/_Layout.cshtml
+++ b/FloraCapstone2nd/Views/Shared/_Layout.cshtml
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/FloraCapstone2nd.styles.css" asp-append-version="true" />
-
 </head>
 <body>
     <header>
@@ -27,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="RegisterUser">Register</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="User">Register</a>
                         </li>
                     </ul>
                 </div>
