Login added, will need fixing due to incorrect configurations

--- a/FloraCapstone2nd/Pages/Index.cshtml
+++ b/FloraCapstone2nd/Pages/Index.cshtml
@@ -5,19 +5,20 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Login</h1>
-    <form asp-controller="Home" asp-action="Login" method="post">
-        <div asp-validation-summary="All" class="text-danger"></div>
-    
-        <label asp-for="AppUsername">Username:</label>
-        <input asp-for="AppUsername" class="form-control"/>
-        <span asp-validation-for="AppUsername" class="text-danger"></span>
-        <br/>
-        <label asp-for="AppPassword">Password:</label>
-        <input asp-for="AppPassword" class="form-control"/>
-        <span asp-validation-for="AppPassword" class="text-danger"></span>
-        <br/>
-        <input type="submit" value="Login" /> 
-    </form>
+<div class="text-center center">
+    <div style="width:200px">
+        <h1 class="display-4">Login</h1>
+        <form asp-controller="Home" asp-action="Login" method="post">
+            <div asp-validation-summary="All" class="text-danger"></div>
+        
+            <label asp-for="Username">Username:</label>
+            <input asp-for="Username" class="form-control"/>
+            <br/>
+            <label asp-for="Password">Password:</label>
+            <input asp-for="Password" class="form-control"/>
+            <br/>
+            <input type="submit" style ="btn btn-success" value="Login" /> 
+        </form>
+    </div>
 </div>
+New Users Register <a asp-controller="Account" asp-action="RegisterUser">here</a> !
