--- a/FloraCapstone2nd/Pages/Shared/_Layout.cshtml
+++ b/FloraCapstone2nd/Pages/Shared/_Layout.cshtml
@@ -27,10 +27,11 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="RegisterUser">Register</a>
+                            <a class="nav-link text-dark" asp-controller="" asp-action="">Forum</a>
                         </li>
                     </ul>
                 </div>
+                <partial name="_LoginPartial"/>
             </div>
         </nav>
     </header>
