The _Layout page is finished na.

--- a/FloraCapstone2nd/Pages/Index.cshtml
+++ b/FloraCapstone2nd/Pages/Index.cshtml
@@ -5,11 +5,12 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
+<div class="container" >
+    <div class="text-center" >
     
-    <h1 class="display-4">Login</h1>
-    <p>
-        Hello World
-    </p>
-
+        <h1 class="display-4">Login</h1>
+        <p>
+            Hello World
+        </p>
+    </div>
 </div>
