--- a/FloraCapstone2nd/wwwroot/css/site.css
+++ b/FloraCapstone2nd/wwwroot/css/site.css
@@ -1,3 +1,4 @@
+/* After this line are the codes for the sidebar menu/navbar.*/
 *{
     margin: 0;
     padding: 0;
@@ -97,7 +98,27 @@ label #cancelbutton{
     margin-left: 250px;
 }
 
+/*After this line are the codes for the background picture.*/
+html, body{
+    margin: 0;
+    height: 100%
+}
+.bg-container {
+    width: 100%;
+    height: 100%;
+    background-image: url('../backgroundimages/bg1.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+}
 
+/*After this line are the codes for the logo.*/
+.Logo {
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    background-repeat: no-repeat;
+}
 /*
 
 html {
