Home Page of Non-user

--- a/FloraCapstone2nd/Pages/Index.cshtml
+++ b/FloraCapstone2nd/Pages/Index.cshtml
@@ -5,12 +5,44 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="container" >
+<div class="titlecontainer" >
     <div class="text-center" >
     
         <h1 class="display-4">Login</h1>
         <p>
-            Hello World
+            Hello user
         </p>
     </div>
 </div>
+
+<div class="homeoptions">
+
+    <div class="containerleftdiagnose">
+        <div class="textcontainerleftdiagnose">
+            <h1>Diagnose</h1>
+            <p>An advanced search engine to find what sickness your plant is suffering from.</p>
+        </div>
+        
+        <div class="diagnoseicon">
+
+        </div>
+    </div>
+
+
+
+    <div class="containerrighthowto">
+         <h1>How To's</h1>
+         <p>A comprehensive guide to caring for plants for those just starting out and more.</p>
+    </div>
+
+
+
+    <div class="containerbottomaboutus">
+         <h1>About Us</h1>
+         <p>Meet the team, our brand and contact us if need be.</p>
+    </div>
+
+</div>
+
+
+
