--- a/FloraCapstone2nd/Pages/Shared/_Layout.cshtml
+++ b/FloraCapstone2nd/Pages/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
             <img src="~/BackgroundImages/Logo.png" />
         </div>
 
-
+        <br/>  <br/> <br/> 
   
   <!--
     <header>
@@ -97,8 +97,8 @@
     </div>
     
 
-  <footer class=" footer text-muted">
-        <div class="container">
+  <footer class="text-center footer text-muted">
+        <div class="footercontainer">
             &copy; 2022 - FloraCapstone2nd - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
