--- a/FloraCapstone2nd/Pages/Index.cshtml
+++ b/FloraCapstone2nd/Pages/Index.cshtml
@@ -4,7 +4,7 @@
 @{
     ViewData["Title"] = "Home page";
 }
-
+<!--
 <div class="titlecontainer" >
     <div class="text-center" >
     
@@ -14,35 +14,55 @@
         </p>
     </div>
 </div>
-
+-->
 <div class="homeoptions">
+
 
     <div class="containerleftdiagnose">
         <div class="textcontainerleftdiagnose">
             <h1>Diagnose</h1>
-            <p>An advanced search engine to find what sickness your plant is suffering from.</p>
+            <br/>
+            <p>An advanced search engine to find </p>
+            <p>what sickness your plant is suffering from.</p>
         </div>
         
         <div class="diagnoseicon">
-
+            <img src="~/BackgroundImages/diagnosepc.png"/>
         </div>
     </div>
 
 
 
     <div class="containerrighthowto">
-         <h1>How To's</h1>
-         <p>A comprehensive guide to caring for plants for those just starting out and more.</p>
+        <div class="textcontainerrighthowto">
+            <h1>How To's</h1>
+            <br/>
+            <p>A comprehensive guide to caring for plants for those</p> 
+            <p> just starting out and more.</p>
+        </div>
+
+        <div class="howtoicon">
+            <img src="~/BackgroundImages/Image 8@1x.png" />
+        </div>
+         
     </div>
 
 
 
     <div class="containerbottomaboutus">
-         <h1>About Us</h1>
-         <p>Meet the team, our brand and contact us if need be.</p>
+        <div class="textcontainerbottomaboutus">
+            <h1>About Us</h1>
+            <br/>
+            <p>Meet the team, our brand and contact us if need be.</p>
+        </div>
+         
+        <div class="aboutusicon">
+            <img src="~/BackgroundImages/Image 7@1x.png" />
+        </div>
     </div>
-
 </div>
+
+
 
 
 
