Tried making Diagnose, but it doesn't work in this branch for some reason. I'll be making a new branch for Diagnose. I think it was a problem with the start-up page but am not sure.

--- a/FloraCapstone2nd/Pages/Diagnose/Index.cshtml
+++ b/FloraCapstone2nd/Pages/Diagnose/Index.cshtml
@@ -1,4 +1,16 @@
-﻿@page
-@model FloraCapstone2nd.Pages.Shared.Diagnose.IndexModel
+﻿<a asp-controller="Home" asp-action="Index" class="btn btn-primary"> 
+    Back to Home Page 
+</a>
+<a asp-controller="Diagnose" asp-action="Add" class="btn btn-success"> 
+    Create New Plant Disease 
+</a>
+
+
+
+
+@*
+*@ 
 @{
 }
+
+
