--- a/FloraCapstone2nd/Pages/Index.cshtml
+++ b/FloraCapstone2nd/Pages/Index.cshtml
@@ -4,17 +4,17 @@
 @{
     ViewData["Title"] = "Home page";
 }
-<!--
+
 <div class="titlecontainer" >
     <div class="text-center" >
     
-        <h1 class="display-4">Login</h1>
+        <h1 class="display-4">Home</h1>
         <p>
             Hello user
         </p>
     </div>
 </div>
--->
+
 <div class="homeoptions">
 
 
