--- a/FloraCapstone2nd/Pages/Shared/_Layout.cshtml
+++ b/FloraCapstone2nd/Pages/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
         <div class="SideBar">
             <h1>IkapaTigi</h1>
             <ul>
-                <li><a class="navbar-brand" asp-area="" asp-page="/Index"> <i class="fa-solid fa-home"></i> Home </a> </li>
+                <li><a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"> <i class="fa-solid fa-home"></i> Home </a> </li>
                 <li><a class="navbar-brand" asp-area="" asp-controller="Diagnose" asp-action="Index"> <i class="fa-solid fa-stethoscope"></i> Diagnose </a> </li>
                 <li><a class="navbar-brand" asp-area="" asp-page="/Index"> <i class="fa-solid fa-book"></i> How To's </a> </li>
                 <li> <a class="navbar-brand" asp-area="" asp-page="/Index"> <i class="fa-solid fa-people-group"></i> About Us </a> </li>
