--- a/FloraCapstone2nd/Pages/_ViewImports.cshtml
+++ b/FloraCapstone2nd/Pages/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using FloraCapstone2nd
 @namespace FloraCapstone2nd.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+@using FloraCapstone2nd.Model
